--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
+  
   <title>Frontend Mentor | Crowdfunding product page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,7 +20,27 @@
   <link rel="stylesheet" href="./scss/main.scss">
 </head>
 <body>
-  About
+  <header>
+    <img src="./assets/images/image-hero-mobile.jpg"
+    srcset="./assets/images/image-hero-desktop.jpg 1440w,
+    ./assets/images/image-hero-mobile.jpg 750w">
+  </header>
+  <main>
+    <div class="card title-card">
+      <img class="logo" src="./assets/images/logo-mastercraft.svg">
+      <h1 class="title text1">Mastercraft Bamboo Monitor Riser</h1>
+      <p class="subtitle">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      <div class="title-actions">
+        <button>Back this project</button>
+        <button class="bookmark">
+            <img src="./assets/images/icon-bookmark.svg" alt="">
+        </button>
+      </div>
+  </main>
+
+
+
+  <!-- About
   Discover
   Get Started
 
@@ -58,11 +82,11 @@
   You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
   to our Backer member list. Shipping is included.
   0 left
-  Out of Stock
+  Out of Stock -->
 
   <!-- Selection modal start -->
 
-  Back this project
+  <!-- Back this project
   Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
 
   Pledge with no reward
@@ -73,46 +97,46 @@
   Pledge $25 or more
   You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
   you’ll be added to a special Backer member list.
-  101 left
+  101 left -->
 
   <!-- Selected pledge start -->
-  Enter your pledge
+  <!-- Enter your pledge
   $25
-  Continue
+  Continue -->
   <!-- Selected pledge end -->
 
-  Black Edition Stand
+  <!-- Black Edition Stand
   Pledge $75 or more
   You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
   member list. Shipping is included.
-  64 left
+  64 left -->
 
   <!-- Selected pledge start -->
-  Enter your pledge
+  <!-- Enter your pledge
   $75
-  Continue
+  Continue -->
   <!-- Selected pledge end -->
 
-  Mahogany Special Edition
+  <!-- Mahogany Special Edition
   Pledge $200 or more
   You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
   to our Backer member list. Shipping is included.
-  0 left
+  0 left -->
 
   <!-- Selected pledge  start -->
-  Enter your pledge
+  <!-- Enter your pledge
   $200
-  Continue
+  Continue -->
   <!-- Selected pledge end -->
 
   <!-- Selection modal end -->
 
   <!-- Success modal start -->
 
-  Thanks for your support!
+  <!-- Thanks for your support!
   Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
   an email once our campaign is completed.
-  Got it!
+  Got it! -->
 
   <!-- Success modal end -->
 </body>
