some progress on title card & some partial reshuffling

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
     ./assets/images/image-hero-mobile.jpg 750w">
   </header>
   <main>
-    <div class="card title-card">
+    <div class="card flex-col align-center">
       <img class="logo" src="./assets/images/logo-mastercraft.svg">
       <h1 class="title text1">Mastercraft Bamboo Monitor Riser</h1>
-      <p class="subtitle">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      <p class="subtitle text2">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="title-actions">
         <button>Back this project</button>
         <button class="bookmark">
