--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | Crowdfunding product page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -19,10 +21,10 @@
   </style> -->
   <link rel="stylesheet" href="./scss/main.scss">
 </head>
+
 <body>
   <header>
-    <img src="./assets/images/image-hero-mobile.jpg"
-    srcset="./assets/images/image-hero-desktop.jpg 1440w,
+    <img src="./assets/images/image-hero-mobile.jpg" srcset="./assets/images/image-hero-desktop.jpg 1440w,
     ./assets/images/image-hero-mobile.jpg 750w">
   </header>
   <main>
@@ -31,9 +33,9 @@
       <h1 class="title text1">Mastercraft Bamboo Monitor Riser</h1>
       <p class="subtitle text2">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="title-actions">
-        <button>Back this project</button>
+        <button class="btn1">Back this project</button>
         <button class="bookmark">
-            <img src="./assets/images/icon-bookmark.svg" alt="">
+          <img src="./assets/images/icon-bookmark.svg" alt="">
         </button>
       </div>
   </main>
@@ -140,4 +142,5 @@
 
   <!-- Success modal end -->
 </body>
+
 </html>
