--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,20 @@
           <img src="./assets/images/icon-bookmark.svg" alt="">
         </button>
       </div>
+    </div>
+    <!-- <div class="card">
+      <div class="funding-info">
+        <div>
+          <p class="text-align-center">$89,914<br> <span> $100,000 backed</span></p>
+        </div>
+        <div>
+          <p class="text-align-center">5,007<br> <span> total backers</span></p>
+        </div>
+        <div>
+          <p class="text-align-center">56<br> <span>days left</span></p>
+        </div>
+      </div>
+    </div> -->
   </main>
 
 
