--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet">
-
   <title>Frontend Mentor | Crowdfunding product page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   <link rel="stylesheet" href="./scss/main.scss">
 </head>
 
@@ -30,7 +20,7 @@
     </picture>
   </header>
   <main>
-    <div class="card flex-col align-center">
+    <div class="card">
       <img class="logo" src="./assets/images/logo-mastercraft.svg">
       <h1 class="title text1">Mastercraft Bamboo Monitor Riser</h1>
       <p class="subtitle text2">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
@@ -41,19 +31,23 @@
         </button>
       </div>
     </div>
-    <!-- <div class="card">
-      <div class="funding-info">
+    <div class="card card-margin-top">
+      <div class="progress-info">
         <div>
-          <p class="text-align-center">$89,914<br> <span> $100,000 backed</span></p>
+          <p class="progress-num">$89,914</p>
+          <p class="text2">of $100,000 backed</p>
         </div>
         <div>
-          <p class="text-align-center">5,007<br> <span> total backers</span></p>
+          <p class="progress-num">5,007</p>
+          <p class="text2"> total backers</p>
         </div>
         <div>
-          <p class="text-align-center">56<br> <span>days left</span></p>
+          <p class="progress-num">56</p>
+          <p class="text2">days left</p>
         </div>
       </div>
-    </div> -->
+      <!-- <div>progress bar</div> -->
+    </div>
   </main>
 
 
