--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     </picture>
   </header>
   <main>
-    <div class="card flex-col align-center">
+    <div class="card">
       <img class="logo" src="./assets/images/logo-mastercraft.svg">
       <h1 class="title text1">Mastercraft Bamboo Monitor Riser</h1>
       <p class="subtitle text2">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
@@ -31,7 +31,7 @@
         </button>
       </div>
     </div>
-    <div class="card card-margin-top flex-col align-center">
+    <div class="card card-margin-top">
       <div class="progress-info">
         <div>
           <p class="progress-num">$89,914</p>
@@ -48,7 +48,7 @@
       </div>
       <!-- <div>progress bar</div> -->
     </div>
-    <div class="card card-margin-top flex-col about align-center">
+    <div class="card card-margin-top about">
       <p class="text3">About this project</p>
       <p class="text2-desc">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your
         screen
@@ -57,6 +57,12 @@
       <p class="text2-desc">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below
         your computer
         to allow notepads, pens, and USB sticks to be stored under the stand.</p>
+      <div class="card thin-border">
+        <div class="flex space-between">
+          <p class="text3">Bamboo Stand</p>
+          <p>Pledge $25 or more</p>
+        </div>
+      </div>
     </div>
   </main>
 
