title card overlap fix with hero image and pledge card WIP

--- a/src/index.html
+++ b/src/index.html
@@ -50,17 +50,37 @@
     </div>
     <div class="card card-margin-top about">
       <p class="text3">About this project</p>
-      <p class="text2-desc">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your
+      <p class="text4">The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your
         screen
         to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve
         your posture and make you more comfortable while at work, helping you stay focused on the task at hand.</p>
-      <p class="text2-desc">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below
+      <p class="text4">Featuring artisan craftsmanship, the simplicity of design creates extra desk space below
         your computer
         to allow notepads, pens, and USB sticks to be stored under the stand.</p>
-      <div class="card thin-border">
-        <div class="flex space-between">
-          <p class="text3">Bamboo Stand</p>
-          <p>Pledge $25 or more</p>
+      <div class="pledge-card">
+        <div class="pledge-card-inline-container">
+          <p class="text5">Bamboo Stand</p>
+          <p class="text6">Pledge $25 or more</p>
+        </div>
+        <p class="text4">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional
+          campaign, and
+          you’ll be added to a special Backer member list.</p>
+        <div class="pledge-card-inline-container align-center">
+          <p class="text1">101 <span class="text2 vertical-align-middle">left</span></p>
+          <button class="btn1">Select Reward</button>
+        </div>
+      </div>
+      <div class="pledge-card card-margin-top">
+        <div class="pledge-card-inline-container">
+          <p class="text5">Black Edition Stand</p>
+          <p class="text6">Pledge $75 or more</p>
+        </div>
+        <p class="text4">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our
+          Backer
+          member list. Shipping is included.</p>
+        <div class="pledge-card-inline-container align-center">
+          <p class="text1">64 <span class="text2 vertical-align-middle">left</span></p>
+          <button class="btn1">Select Reward</button>
         </div>
       </div>
     </div>
