static cards done

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
         your computer
         to allow notepads, pens, and USB sticks to be stored under the stand.</p>
       <div class="pledge-card">
-        <div class="pledge-card-inline-container">
+        <div class="pledge-card-inline-container align-items-baseline">
           <p class="text5">Bamboo Stand</p>
-          <p class="text6">Pledge $25 or more</p>
+          <p class="text6 pledge-label">Pledge $25 or more</p>
         </div>
         <p class="text4">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional
           campaign, and
@@ -71,9 +71,9 @@
         </div>
       </div>
       <div class="pledge-card card-margin-top">
-        <div class="pledge-card-inline-container">
+        <div class="pledge-card-inline-container align-items-baseline">
           <p class="text5">Black Edition Stand</p>
-          <p class="text6">Pledge $75 or more</p>
+          <p class="text6 pledge-label">Pledge $75 or more</p>
         </div>
         <p class="text4">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our
           Backer
@@ -81,6 +81,19 @@
         <div class="pledge-card-inline-container align-center">
           <p class="text1">64 <span class="text2 vertical-align-middle">left</span></p>
           <button class="btn1">Select Reward</button>
+        </div>
+      </div>
+      <div class="pledge-card card-margin-top">
+        <div class="pledge-card-inline-container align-items-baseline">
+          <p class="text5">Mahogany Special Edition</p>
+          <p class="text6 pledge-label">Pledge $200 or more</p>
+        </div>
+        <p class="text4">You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll
+          be added
+          to our Backer member list. Shipping is included.</p>
+        <div class="pledge-card-inline-container align-center">
+          <p class="text1">0 <span class="text2 vertical-align-middle">left</span></p>
+          <button class="btn1">Out of stock</button>
         </div>
       </div>
     </div>
