greys out out of stock cards

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           <button class="btn1">Select Reward</button>
         </div>
       </div>
-      <div class="pledge-card card-margin-top">
+      <div class="pledge-card disabled card-margin-top">
         <div class="pledge-card-inline-container align-items-baseline">
           <p class="text5">Mahogany Special Edition</p>
           <p class="text6 pledge-label">Pledge $200 or more</p>
@@ -93,7 +93,7 @@
           to our Backer member list. Shipping is included.</p>
         <div class="pledge-card-inline-container align-center">
           <p class="text1">0 <span class="text2 vertical-align-middle">left</span></p>
-          <button class="btn1">Out of stock</button>
+          <button class="btn1 disabled">Out of stock</button>
         </div>
       </div>
     </div>
