--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,13 @@
       </div>
     </div>
   </main>
+  <div class="modal-container">
+    <div class="flex justify-center">
+      <div class="modal card">
+        <div class="flex justify-end"><img class="small" src="./assets/images/icon-close-modal.svg"></div>
+      </div>
+    </div>
+  </div>
 
 
 
