select card effect

--- a/src/index.html
+++ b/src/index.html
@@ -106,18 +106,18 @@
             src="./assets/images/icon-close-modal.svg"></div>
         <p class="text3">Back this project</p>
         <p class="text2">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
-        <div class="pledge-card card">
+        <div class="pledge-card card" onclick="showPledgeInput(this)">
           <div class="custom-radio flex">
-            <input class="text6" type="radio">
+            <input class="text6" type="radio" name="pledge">
             <label class="text5">Pledge with no reward</label>
           </div>
           <p class="text4">Choose to support us without a reward if you simply believe in our project. As a backer,
             you will be signed up to receive product updates via email.</p>
         </div>
-        <div class="pledge-card card card-margin-top">
+        <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
             <div>
-              <input class="text6" type="radio">
+              <input class="text6" type="radio" name="pledge">
               <label class="text5">Bamboo</label>
               <span class="text6 margin-left-small">Pledge $25 or more</span>
             </div>
@@ -128,10 +128,10 @@
             you’ll be added to a special Backer member list.</p>
           <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
         </div>
-        <div class="pledge-card card card-margin-top">
+        <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
             <div>
-              <input class="text6" type="radio">
+              <input class="text6" type="radio" name="pledge">
               <label class="text5">Black Edition Stand</label>
               <span class="text6 margin-left-small">Pledge $75 or more</span>
             </div>
@@ -142,24 +142,10 @@
             member list. Shipping is included.</p>
           <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
         </div>
-        <div class="pledge-card card card-margin-top">
+        <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
             <div>
-              <input class="text6" type="radio">
-              <label class="text5">Mahogany Special Edition</label>
-              <span class="text6 margin-left-small">Pledge $200 or more</span>
-            </div>
-            <p class="text3 item-stat">64 <span class="text2 margin-left-small">left</span></p>
-          </div>
-          <p class="text4">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to
-            our Backer
-            member list. Shipping is included.</p>
-          <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
-        </div>
-        <div class="pledge-card card card-margin-top">
-          <div class="custom-radio pledge-option pledge-card-inline-container">
-            <div>
-              <input class="text6" type="radio">
+              <input class="text6" type="radio" name="pledge">
               <label class="text5">Mahogany Special Edition</label>
               <span class="text6 margin-left-small">Pledge $200 or more</span>
             </div>
