fixes label alignment on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
-            <div>
+            <div class="flex flex-wrap">
               <input class="text6" type="radio" name="pledge">
               <label class="text5">Bamboo</label>
               <span class="text6 margin-left-small">Pledge $25 or more</span>
@@ -130,7 +130,7 @@
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
-            <div>
+            <div class="flex flex-wrap">
               <input class="text6" type="radio" name="pledge">
               <label class="text5">Black Edition Stand</label>
               <span class="text6 margin-left-small">Pledge $75 or more</span>
@@ -144,7 +144,7 @@
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
-            <div>
+            <div class="flex flex-wrap">
               <input class="text6" type="radio" name="pledge">
               <label class="text5">Mahogany Special Edition</label>
               <span class="text6 margin-left-small">Pledge $200 or more</span>
