adds the input to pledge card

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,11 @@
           </div>
           <p class="text4">Choose to support us without a reward if you simply believe in our project. As a backer,
             you will be signed up to receive product updates via email.</p>
+          <div class="pledge-input">
+            <div class="flex justify-end">
+              <button class="card-margin-top btn2">Continue</button>
+            </div>
+          </div>
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
@@ -127,6 +132,15 @@
             campaign, and
             you’ll be added to a special Backer member list.</p>
           <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
+          <div class="pledge-input">
+            <div class="flex space-between align-items-baseline flex-wrap">
+              <p class="text2 card-margin-top">Enter your pledge</p>
+              <div class="card-margin-top">
+                <input class="input1" type="number">
+                <button class="btn2">Continue</button>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
@@ -141,6 +155,15 @@
             our Backer
             member list. Shipping is included.</p>
           <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
+          <div class="pledge-input">
+            <div class="flex space-between align-items-baseline flex-wrap">
+              <p class="text2 card-margin-top">Enter your pledge</p>
+              <div class="card-margin-top">
+                <input class="input1" type="number">
+                <button class="btn2">Continue</button>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="pledge-card card card-margin-top" onclick="showPledgeInput(this)">
           <div class="custom-radio pledge-option pledge-card-inline-container">
@@ -155,6 +178,15 @@
             our Backer
             member list. Shipping is included.</p>
           <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
+          <div class="pledge-input">
+            <div class="flex space-between align-items-baseline flex-wrap">
+              <p class="text2 card-margin-top">Enter your pledge</p>
+              <div class="card-margin-top">
+                <input class="input1" type="number">
+                <button class="btn2">Continue</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
