adds proxy pattern to update DOM Bind DOM to store WIP

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
     <div class="card card-margin-top">
       <div class="progress-info">
         <div>
-          <p class="progress-num">$89,914</p>
+          <p class="progress-num">-</p>
           <p class="text2">of $100,000 backed</p>
         </div>
         <div>
-          <p class="progress-num">5,007</p>
+          <p class="progress-num">-</p>
           <p class="text2"> total backers</p>
         </div>
         <div>
@@ -67,7 +67,7 @@
           campaign, and
           you’ll be added to a special Backer member list.</p>
         <div class="pledge-card-inline-container align-center">
-          <p class="text1">101 <span class="text2 vertical-align-middle">left</span></p>
+          <p class="text1">-<span class="text2 vertical-align-middle">left</span></p>
           <button class="btn1" onclick="showModal()">Select Reward</button>
         </div>
       </div>
@@ -80,7 +80,7 @@
           Backer
           member list. Shipping is included.</p>
         <div class="pledge-card-inline-container align-center">
-          <p class="text1">64 <span class="text2 vertical-align-middle">left</span></p>
+          <p class="text1">- <span class="text2 vertical-align-middle">left</span></p>
           <button class="btn1" onclick="showModal()">Select Reward</button>
         </div>
       </div>
@@ -93,7 +93,7 @@
           be added
           to our Backer member list. Shipping is included.</p>
         <div class="pledge-card-inline-container align-center">
-          <p class="text1">0 <span class="text2 vertical-align-middle">left</span></p>
+          <p class="text1">- <span class="text2 vertical-align-middle">left</span></p>
           <button class="btn1 disabled">Out of stock</button>
         </div>
       </div>
@@ -115,7 +115,7 @@
             you will be signed up to receive product updates via email.</p>
           <div class="pledge-input">
             <div class="flex justify-end">
-              <button class="card-margin-top btn2">Continue</button>
+              <button class="card-margin-top btn2" onclick="project()">Continue</button>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
               <label class="text5">Bamboo</label>
               <span class="text6 margin-left-small">Pledge $25 or more</span>
             </div>
-            <p class="text3 item-stat">101 <span class="text2 margin-left-small">left</span></p>
+            <p class="text3 item-stat">- <span class="text2 margin-left-small">left</span></p>
           </div>
           <p class="text4">You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional
             campaign, and
@@ -149,12 +149,12 @@
               <label class="text5">Black Edition Stand</label>
               <span class="text6 margin-left-small">Pledge $75 or more</span>
             </div>
-            <p class="text3 item-stat">64 <span class="text2 margin-left-small">left</span></p>
+            <p class="text3 item-stat">- <span class="text2 margin-left-small">left</span></p>
           </div>
           <p class="text4">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to
             our Backer
             member list. Shipping is included.</p>
-          <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
+          <p class="text3 item-stat item-stat-bottom">- <span class="text2 margin-left-small">left</span></p>
           <div class="pledge-input">
             <div class="flex space-between align-items-baseline flex-wrap">
               <p class="text2 card-margin-top">Enter your pledge</p>
@@ -172,12 +172,12 @@
               <label class="text5">Mahogany Special Edition</label>
               <span class="text6 margin-left-small">Pledge $200 or more</span>
             </div>
-            <p class="text3 item-stat">64 <span class="text2 margin-left-small">left</span></p>
+            <p class="text3 item-stat">- <span class="text2 margin-left-small">left</span></p>
           </div>
           <p class="text4">You get a Black Special Edition computer stand and a personal thank you. You’ll be added to
             our Backer
             member list. Shipping is included.</p>
-          <p class="text3 item-stat item-stat-bottom">101 <span class="text2 margin-left-small">left</span></p>
+          <p class="text3 item-stat item-stat-bottom">- <span class="text2 margin-left-small">left</span></p>
           <div class="pledge-input">
             <div class="flex space-between align-items-baseline flex-wrap">
               <p class="text2 card-margin-top">Enter your pledge</p>
